--- a/VacationHomework.ipynb
+++ b/VacationHomework.ipynb
@@ -4058,7 +4058,7 @@
    "outputs": [],
    "source": [
     "#connect mlab mongoDB\n",
-    "mongo_uri = 'mongodb://hyubyy:ee0423@ds151814.mlab.com:51814/sanghyub'"
+    "mongo_uri = 'mongodb://hyubyy:###########@ds151814.mlab.com:51814/sanghyub'"
    ]
   },
   {
